#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2026-01-31 Fri> *1.1.3*

Added auto-scroll control for chat buffer

- Added =ollama-buddy-auto-scroll= customization option (default: nil)
- When nil, cursor stays in place during streaming output, allowing manual scrolling
- When t, buffer auto-scrolls to follow new output (previous behavior)
- Works with both network process and curl backends

** <2026-01-30 Thu> *1.1.2*

Simplified chat interface

- Streamlined welcome screen showing only essential commands
- Full interface info (models, commands) moved to separate =*Ollama Buddy Info*= buffer via =C-c A=
- Model selection now shows counts: =C-c m (10 ollama / 4 online)= and =C-u C-c m (7 cloud)=
- Header line displays bold prefix characters for loaded external providers: =acgks=
- Welcome screen lists enabled online LLM providers (e.g., "Online: a: OpenAI | c: Claude")

** <2026-01-28 Tue> *1.1*

Added Ollama Cloud Models support

- Cloud models (running on ollama.com infrastructure) now work seamlessly
- =ollama-buddy-cloud-signin= to automatically open browser for authentication
- Cloud models are proxied through the local Ollama server which handles authentication
- Use =C-u C-c m= or transient menu "Model > Cloud" to select cloud models
- Status line shows ☁ indicator when using a cloud model
- Available cloud models include: qwen3-coder:480b-cloud, deepseek-v3.1:671b-cloud, gpt-oss:120b-cloud, minimax-m2.1:cloud, and more

To use cloud models:
1. Sign in once with =M-x ollama-buddy-cloud-signin= (opens browser automatically)
2. Select a cloud model with =C-u C-c m=
3. Use normally - the local Ollama server handles cloud authentication

#+begin_src elisp