@@ -130,7 +130,6 @@
     ("8" "Context Type" ollama-buddy-toggle-context-display-type)
     ("T" "Token Display" ollama-buddy-toggle-token-display)
     ("V" "Reasoning Vis" ollama-buddy-toggle-reasoning-visibility)
-    ("#" "Fancy" ollama-buddy-toggle-model-highlighting)
     ]
    
    ["History"
